fix the alignment and the button

--- a/styles/classes/_buttons.scss
+++ b/styles/classes/_buttons.scss
@@ -1,30 +1,41 @@
 .btn-1 {
   background: #f9bf3a;
   border: 1px solid var(--dark);
-  width: 200px;
-  height: 40px;
+  width: 300px;
+  height: 70px;
   position: absolute;
-  bottom: 5px;
-  right: 10px;
+  bottom: 0px;
+  left: 0px;
   z-index: 4;
   transition: var(--trans-2);
+  transform: translate(-10px, -10px);
 
-  &:hover {
-    bottom: 10px;
-    right: 20px;
+  // &:hover {
+  //   bottom: 15px;
+  //   right: 20px;
+  // }
+
+  // &:active {
+  //   bottom: 8px;
+  //   right: 10px;
+  // }
+}
+
+.btn-1-container {
+  width: 300px;
+  &:hover > .btn-1 {
+    transform: translate(-20px, -20px);
   }
-
-  &:active {
-    bottom: 5px;
-    right: 10px;
+  &:active > .btn-1 {
+    transform: translate(0px, 0px);
   }
 }
 
 .bord {
   content: "";
   position: relative;
-  width: 200px;
-  height: 40px;
+  width: 300px;
+  height: 70px;
   border: 1px solid var(--dark);
   z-index: 2;
 }
