--- a/styles/classes/_classes.scss
+++ b/styles/classes/_classes.scss
@@ -1,2 +1,7 @@
+.grayscale {
+  filter: grayscale(100%);
+}
 
-
+.scale-x--1{
+  transform: scaleX(-1);
+}
