--- a/styles/global/_style.scss
+++ b/styles/global/_style.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+::selection {
+  color: var(--light);
+  background-color: var(--dark);
+}
+
 body{
   min-height: 100vh;
   color: var(--dark);
